# ms-ventas-crm

./: .coveragerc  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  cloudrun.yaml  pyproject.toml
.github/workflows/: main.yml  ms-ci-cd.yml
scripts/: sanitize_pyproject.py
src/: app.py  config.py  dependencies.py  errors.py
src/domain/: models.py  schemas.py
src/infrastructure/: http.py  infrastructure.py  loader.py
src/routes/: health.py  planes.py  pubsub.py  visitas.py
src/services/: servicio_plan_ventas.py  servicio_visitas.py
tests/: conftest.py  test_health.py  test_http_client.py  test_loader.py  test_planes.py  test_pubsub.py  test_servicio_plan_de_ventas.py  test_visitas.py
